services/jenkins/jenkins.service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: jenkins
  namespace: jenkins3
spec: 
  type: NodePort
  selector: 
    app: master
  ports: 
    - 
      name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - 
      name: slave
      port: 50000
      protocol: TCP
