services/jenkins/jenkins.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: jenkins
 namespace: jenkins3
spec:
 rules:
   - host: jenkins3.k8s.proserve.nl
     http:
       paths:
         - path: /
           backend:
             serviceName: jenkins
             servicePort: 8080
